--- a/admin/login.html
+++ b/admin/login.html
@@ -1,4 +1,5 @@
-
+<html>
+<head>
 <title>网站管理员登陆</title>
 <style type="text/css">
 <!--
@@ -43,9 +44,26 @@ function correctPNG()
 }
 window.attachEvent("onload", correctPNG);
 </script>
-
-
 <link href="images/skin.css" rel="stylesheet" type="text/css">
+<script type="text/javascript" src="/js/jquery.js">
+</script>
+<script type="text/javascript">
+$(document).ready(function(){
+  $("#Submit").click(function(){
+	  var username = $("#username").val();
+	  var password = $("#password").val();
+	  $.post("demo_test_post.asp",
+			  {
+			    name:username,
+			    city:password
+			  },
+			  function(data,status){
+			    alert("Data: " + data + "\nStatus: " + status);
+	   });
+  });
+});
+</script>
+</head>
 <body>
 <table width="100%" height="166" border="0" cellpadding="0" cellspacing="0">
   <tr>
@@ -104,15 +122,16 @@ window.attachEvent("onload", correctPNG);
               <td>&nbsp;</td>
               <td height="21"><table cellSpacing="0" cellPadding="0" width="100%" border="0" id="table211" height="328">
                   <tr>
-                    <td height="164" colspan="2" align="middle"><form name="myform" action="index.html" method="post">
+                    <td height="164" colspan="2" align="middle">
+                    <form name="myform" action="" method="post">
                         <table cellSpacing="0" cellPadding="0" width="100%" border="0" height="143" id="table212">
                           <tr>
                             <td width="13%" height="38" class="top_hui_text"><span class="login_txt">管理员：&nbsp;&nbsp; </span></td>
-                            <td height="38" colspan="2" class="top_hui_text"><input name="username" class="editbox4" value="" size="20">                            </td>
+                            <td height="38" colspan="2" class="top_hui_text"><input id="username" name="username" class="editbox4" value="" size="20">                            </td>
                           </tr>
                           <tr>
                             <td width="13%" height="35" class="top_hui_text"><span class="login_txt"> 密 码： &nbsp;&nbsp; </span></td>
-                            <td height="35" colspan="2" class="top_hui_text"><input class="editbox4" type="password" size="20" name="password">
+                            <td height="35" colspan="2" class="top_hui_text"><input class="editbox4" type="password" size="20" id="password" name="password">
                               <img src="images/luck.gif" width="19" height="18"> </td>
                           </tr>
                           <tr>
@@ -122,7 +141,7 @@ window.attachEvent("onload", correctPNG);
                           </tr>
                           <tr>
                             <td height="35" >&nbsp;</td>
-                            <td width="20%" height="35" ><input name="Submit" type="submit" class="button" id="Submit" value="登 陆"> </td>
+                            <td width="20%" height="35" ><input name="" type="submit" class="button" id="Submit" value="登 陆"> </td>
                             <td width="67%" class="top_hui_text"><input name="cs" type="button" class="button" id="cs" value="取 消" onClick="showConfirmMsg1()"></td>
                           </tr>
                         </table>
@@ -148,3 +167,4 @@ window.attachEvent("onload", correctPNG);
     </table></td>
   </tr>
 </table>
+</html>
