--- a/admin/login.html
+++ b/admin/login.html
@@ -52,14 +52,14 @@ $(document).ready(function(){
   $("#Submit").click(function(){
 	  var username = $("#username").val();
 	  var password = $("#password").val();
-	  $.post("demo_test_post.asp",
-			  {
-			    name:username,
-			    city:password
-			  },
-			  function(data,status){
-			    alert("Data: " + data + "\nStatus: " + status);
-	   });
+	  $.post("/index.php/Login/login",
+		  {
+		  username:username,
+		  password:password
+		  },
+		  function(data){
+		    alert("Data: " + data.info.toString());
+		});
   });
 });
 </script>
@@ -123,7 +123,6 @@ $(document).ready(function(){
               <td height="21"><table cellSpacing="0" cellPadding="0" width="100%" border="0" id="table211" height="328">
                   <tr>
                     <td height="164" colspan="2" align="middle">
-                    <form name="myform" action="" method="post">
                         <table cellSpacing="0" cellPadding="0" width="100%" border="0" height="143" id="table212">
                           <tr>
                             <td width="13%" height="38" class="top_hui_text"><span class="login_txt">π‹¿Ì‘±£∫&nbsp;&nbsp; </span></td>
@@ -146,7 +145,7 @@ $(document).ready(function(){
                           </tr>
                         </table>
                         <br>
-                    </form></td>
+                    </td>
                   </tr>
                   <tr>
                     <td width="433" height="164" align="right" valign="bottom"><img src="images/login-wel.gif" width="242" height="138"></td>
