--- a/admin/admin_top.html
+++ b/admin/admin_top.html
@@ -1,10 +1,17 @@
 <html>
 <head>
 <title><%= title %> - 管理页面</title>
+<script type="text/javascript" src="/js/jquery.js">
+</script>
+<script type="text/javascript" src="/js/all.js">
+</script>
 <script language=JavaScript>
 function logout(){
 	if (confirm("您确定要退出控制面板吗？"))
-	top.location = "out.asp";
+	{
+		setCookie("username","",1);
+		top.location = "login.html";
+	}
 	return false;
 }
 </script>
@@ -34,6 +41,13 @@ function showsubmenu(sid) {
 </script>
 <base target="main">
 <link href="images/skin.css" rel="stylesheet" type="text/css">
+<script>
+var username = getCookie("username");
+if(username == ""){
+	alert("请先登陆!");
+	top.location = "login.html";
+}
+</script>
 </head>
 <body leftmargin="0" topmargin="0">
 <table width="100%" height="64" border="0" cellpadding="0" cellspacing="0" class="admin_topbg">
@@ -41,7 +55,7 @@ function showsubmenu(sid) {
     <td width="61%" height="64"><img src="images/logo.gif" width="262" height="64"></td>
     <td width="39%" valign="top"><table width="100%" border="0" cellspacing="0" cellpadding="0">
       <tr>
-        <td width="74%" height="38" class="admin_txt">管理员：<b><%=session("admin_name")%></b> 您好,感谢登陆使用！</td>
+        <td width="74%" height="38" class="admin_txt">管理员：<b><script>document.write(''+getCookie("username"));</script></b> 您好,感谢登陆使用！</td>
         <td width="22%"><a href="#" target="_self" onClick="logout();"><img src="images/out.gif" alt="安全退出" width="46" height="20" border="0"></a></td>
         <td width="4%">&nbsp;</td>
       </tr>
