--- a/admin/login.html
+++ b/admin/login.html
@@ -111,8 +111,8 @@ $(document).ready(function(){
                     </tr>
                     <tr>
                       <td>&nbsp;</td>
-                      <td width="30%" height="40"><img src="images/icon-demo.gif" width="16" height="16"><a href="http://www.865171.cn" target="_blank" class="left_txt3"> 使用说明</a> </td>
-                      <td width="35%"><img src="images/icon-login-seaver.gif" width="16" height="16"><a href="http://www.865171.cn" class="left_txt3"> 在线客服</a></td>
+                      <td width="30%" height="40">&nbsp;</td>
+                      <td width="35%">&nbsp;</td>
                     </tr>
                   </table></td>
                 </tr>
@@ -131,7 +131,7 @@ $(document).ready(function(){
               <td height="21"><table cellSpacing="0" cellPadding="0" width="100%" border="0" id="table211" height="328">
                   <tr>
                     <td height="164" colspan="2" align="middle">
-                        <table cellSpacing="0" cellPadding="0" width="100%" border="0" height="143" id="table212">
+                        <table cellSpacing="0" cellPadding="0" width="100%" border="0" height="108" id="table212">
                           <tr>
                             <td width="13%" height="38" class="top_hui_text"><span class="login_txt">管理员：&nbsp;&nbsp; </span></td>
                             <td height="38" colspan="2" class="top_hui_text"><input id="username" name="username" class="editbox4" value="" size="20">                            </td>
@@ -140,11 +140,6 @@ $(document).ready(function(){
                             <td width="13%" height="35" class="top_hui_text"><span class="login_txt"> 密 码： &nbsp;&nbsp; </span></td>
                             <td height="35" colspan="2" class="top_hui_text"><input class="editbox4" type="password" size="20" id="password" name="password">
                               <img src="images/luck.gif" width="19" height="18"> </td>
-                          </tr>
-                          <tr>
-                            <td width="13%" height="35" ><span class="login_txt">验证码：</span></td>
-                            <td height="35" colspan="2" class="top_hui_text"><input class=wenbenkuang name=verifycode type=text value="" maxLength=4 size=10>
-                              </td>
                           </tr>
                           <tr>
                             <td height="35" >&nbsp;</td>
