--- a/admin/login.html
+++ b/admin/login.html
@@ -61,9 +61,13 @@ $(document).ready(function(){
 		  },
 		  function(data,status){
 		    if(data.status.toString()=="1"){
-		    	 location.href = 'index.html';
-		    	 setCookie("username",username,1);
-		    	 alert("登陆成功!");
+			    if(data.data.user_type.toString()=="1"){ //Is admin
+		    	  location.href = 'index.html';
+		    	  setCookie("username",username,1);
+ 		    	  alert("登陆成功!");
+			    }else{ //Not admin
+ 		    	 alert("抱歉，您不是管理员!");
+				}
 		    }else{
 		    	 alert("用户名或密码错误!");
 		    }
@@ -144,7 +148,7 @@ $(document).ready(function(){
                           <tr>
                             <td height="35" >&nbsp;</td>
                             <td width="20%" height="35" ><input name="" type="submit" class="button" id="Submit" value="登 陆"> </td>
-                            <td width="67%" class="top_hui_text"><input name="cs" type="button" class="button" id="cs" value="取 消" onClick="showConfirmMsg1()"></td>
+                            <td width="67%" class="top_hui_text">&nbsp;</td>
                           </tr>
                         </table>
                         <br>
