--- a/admin/right_product_add.html
+++ b/admin/right_product_add.html
@@ -16,7 +16,7 @@ body {
     <td width="17" valign="top" background="images/mail_leftbg.gif"><img src="images/left-top-right.gif" width="17" height="29" /></td>
     <td valign="top" background="images/content-bg.gif"><table width="100%" height="31" border="0" cellpadding="0" cellspacing="0" class="left_topbg" id="table2">
       <tr>
-        <td height="31"><div class="titlebt">欢迎界面</div></td>
+        <td height="31"><div class="titlebt">发布商品</div></td>
       </tr>
     </table></td>
     <td width="16" valign="top" background="images/mail_rightbg.gif"><img src="images/nav-right-bg.gif" width="16" height="29" /></td>
@@ -24,20 +24,23 @@ body {
   <tr>
     <td valign="middle" background="images/mail_leftbg.gif">&nbsp;</td>
     <td valign="top" bgcolor="#F7F8F9">
-    <!-- 列表部分-->
-    	<table class="admintable" width="100%">
-           <tr>
-             <th style="width:10%">编号</th>
-             <th>标题</th>
-             <th>操作</th>
-           </tr>
-           <tr>
-             <td>内容1</td>
-             <td>内容1</td>
-             <td>内容1</td>
-           </tr>
-           </table>  
-    <!-- END 列表部分-->
+    	 <!-- 添加信息-->
+   			<table width="100%" height="100">               
+               <tr>
+                 <td width="10%" height="32" >名称：</td>
+                 <td width="90%" ><input type="text"></td>
+               </tr>
+               <tr>
+                 <td height="32" >价格：</td>
+                 <td ><input type="text" value="0">
+                   (元)</td>
+               </tr>
+               <tr>
+                 <td height="26" >&nbsp;</td>
+                 <td  width="90%"><input type="button" value="发布"></td>
+               </tr>
+               </table>
+   			<!-- 添加信息-->
     </td>
     <td background="images/mail_rightbg.gif">&nbsp;</td>
   </tr>
