--- a/admin/left.html
+++ b/admin/left.html
@@ -150,8 +150,8 @@ H1 a {
           </tr>
         </table>
         <ul class="MM">
-          <li><a href="http://www.865171.cn" target="main">发布商品</a></li>
-          <li><a href="http://www.865171.cn" target="main">查询管理</a></li>        
+          <li><a href="right_product_add.html" target="main">发布商品</a></li>
+          <li><a href="right_product_search.html" target="main">查询管理</a></li>        
         </ul>
       </div>
       <h1 class="type"><a href="javascript:void(0)">订单管理</a></h1>
@@ -162,10 +162,10 @@ H1 a {
           </tr>
         </table>
         <ul class="MM">
-          <li><a href="http://www.865171.cn" target="main">查询管理</a></li>
-          <li><a href="http://www.865171.cn" target="main">未付款</a></li>
-          <li><a href="http://www.865171.cn" target="main">已完成</a></li>
-          <li><a href="http://www.865171.cn" target="main">已失效</a></li>
+          <li><a href="right_order_search.html" target="main">查询管理</a></li>
+          <li><a href="right_order_unpaid.html" target="main">未付款</a></li>
+          <li><a href="right_order_finish.html" target="main">已完成</a></li>
+          <li><a href="right_order_invalid.html" target="main">已失效</a></li>
         </ul>
       </div>          
         <script type="text/javascript">
