--- a/admin/right_order_unpaid.html
+++ b/admin/right_order_unpaid.html
@@ -16,7 +16,7 @@ body {
     <td width="17" valign="top" background="images/mail_leftbg.gif"><img src="images/left-top-right.gif" width="17" height="29" /></td>
     <td valign="top" background="images/content-bg.gif"><table width="100%" height="31" border="0" cellpadding="0" cellspacing="0" class="left_topbg" id="table2">
       <tr>
-        <td height="31"><div class="titlebt">ª∂”≠ΩÁ√Ê</div></td>
+        <td height="31"><div class="titlebt">Œ¥÷ß∏∂</div></td>
       </tr>
     </table></td>
     <td width="16" valign="top" background="images/mail_rightbg.gif"><img src="images/nav-right-bg.gif" width="16" height="29" /></td>
