--- a/demo_upload/index.html
+++ b/demo_upload/index.html
@@ -81,8 +81,8 @@ line-height:32px;
 	cursor:pointer;
 }
 </style>
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
-<script type="text/javascript" src="jquery.form.js"></script>
+<script type="text/javascript" src="jquery.js"></script> 
+<script type="text/javascript" src="jquery.form.js"></script> 
 </head>
 
 <body>
