--- a/admin/login.html
+++ b/admin/login.html
@@ -13,36 +13,7 @@ body {
 -->
 </style>
 <script language="JavaScript">
-function correctPNG()
-{
-    var arVersion = navigator.appVersion.split("MSIE")
-    var version = parseFloat(arVersion[1])
-    if ((version >= 5.5) && (document.body.filters)) 
-    {
-       for(var j=0; j<document.images.length; j++)
-       {
-          var img = document.images[j]
-          var imgName = img.src.toUpperCase()
-          if (imgName.substring(imgName.length-3, imgName.length) == "PNG")
-          {
-             var imgID = (img.id) ? "id='" + img.id + "' " : ""
-             var imgClass = (img.className) ? "class='" + img.className + "' " : ""
-             var imgTitle = (img.title) ? "title='" + img.title + "' " : "title='" + img.alt + "' "
-             var imgStyle = "display:inline-block;" + img.style.cssText 
-             if (img.align == "left") imgStyle = "float:left;" + imgStyle
-             if (img.align == "right") imgStyle = "float:right;" + imgStyle
-             if (img.parentElement.href) imgStyle = "cursor:hand;" + imgStyle
-             var strNewHTML = "<span " + imgID + imgClass + imgTitle
-             + " style=\"" + "width:" + img.width + "px; height:" + img.height + "px;" + imgStyle + ";"
-             + "filter:progid:DXImageTransform.Microsoft.AlphaImageLoader"
-             + "(src=\'" + img.src + "\', sizingMethod='scale');\"></span>" 
-             img.outerHTML = strNewHTML
-             j = j-1
-          }
-       }
-    }    
-}
-window.attachEvent("onload", correctPNG);
+
 </script>
 <link href="images/skin.css" rel="stylesheet" type="text/css">
 <script type="text/javascript" src="/js/jquery.js">
@@ -51,6 +22,8 @@ window.attachEvent("onload", correctPNG);
 </script>
 <script type="text/javascript">
 $(document).ready(function(){
+	var oInput = $("#username");
+	oInput.focus();
   $("#Submit").click(function(){
 	  var username = $("#username").val();
 	  var password = $("#password").val();
