improve the upload function

--- a/admin/right_product_add.html
+++ b/admin/right_product_add.html
@@ -87,7 +87,7 @@ $(document).ready(function(){
 	uploadProgress: function(event, position, total, percentComplete) {
 	},
 	success: function(data) {
-		alert("success="+data);
+		alert("success="+data.info[0].savename.toString());
 	},
 	error:function(xhr){
 		alert("error");
